xpcom/threads/InputTaskManager.h
@@ -7,11 +7,11 @@
 #ifndef mozilla_InputTaskManager_h
 #define mozilla_InputTaskManager_h
 
+#include "nsTArray.h"
 #include "nsXULAppAPI.h"
 #include "TaskController.h"
 #include "mozilla/StaticPtr.h"
 #include "mozilla/StaticPrefs_dom.h"
-#include "nsXULAppAPI.h"
 
 namespace mozilla {
 
